fix type spacing

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -125,7 +125,7 @@
   flex-wrap: wrap;
   font-size: 16px;
   justify-content: center;
-  letter-spacing: 0.25px;
+  letter-spacing: 0.5px;
   margin: 0 -0.75rem;
   white-space: nowrap;
 
