--- a/src/templates/home.module.scss
+++ b/src/templates/home.module.scss
@@ -165,7 +165,7 @@
   font-size: 16px;
   font-weight: 400;
   grid-area: credits;
-  letter-spacing: 0.2px;
+  letter-spacing: 0.25px;
   text-align: left;
 }
 
